Harden HLD simulation invariants